syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/go-park-mail-ru/2025_1_adminadmin/internal/pkg/auth/delivery/grpc/gen";

service AuthService {
  rpc SignIn (SignInRequest) returns (UserResponse) {}
  
  rpc SignUp (SignUpRequest) returns (UserResponse) {}
  
  rpc Check (google.protobuf.Empty) returns (UserResponse) {}
  
  rpc LogOut (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  
  rpc UpdateUserPic (UpdateUserPicRequest) returns (UserResponse) {}
  
  rpc GetUserAddresses (google.protobuf.Empty) returns (AddressListResponse) {}
  
  rpc DeleteAddress (DeleteAddressRequest) returns (google.protobuf.Empty) {}
  
  rpc AddAddress (Address) returns (google.protobuf.Empty) {}
}

message SignInRequest {
  string login = 1;
  string password = 2;
}

message SignUpRequest {
  string login = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  string password = 5;
}

message UpdateUserRequest {
  string description = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  string password = 5;
}

message UpdateUserPicRequest {
  bytes user_pic = 1; 
}

message DeleteAddressRequest {
  string id = 1; 
}

message Address {
  string id = 1; 
  string address = 2;
  string user_id = 3; 
}

message UserResponse {
  string login = 1;
  string phone_number = 2;
  string id = 3; 
  string first_name = 4;
  string last_name = 5;
  string description = 6;
  string user_pic = 7; 
}

message AddressListResponse {
  repeated Address addresses = 1;
}
